Fix an image showing overflow

--- a/docs/.vuepress/theme/styles/index.styl
+++ b/docs/.vuepress/theme/styles/index.styl
@@ -8,6 +8,9 @@
 // p {
 //     font-size: 1.2rem;
 // }
+img {
+    width: 100%;
+}
 a {
     color: #2773eb;
     text-decoration: none;
